package com.softwarearchitecture.user.service.service;

import com.softwarearchitecture.user.service.entity.User;

public interface IUser {

    public User save(User user);
}
