@startuml

title __SERVICE's Class Diagram__\n

  namespace com.softwarearchitecture.user.service {
    namespace service {
      interface com.softwarearchitecture.user.service.service.IRoleService {
          {abstract} + findRoleByName()
      }
    }
  }
  

  namespace com.softwarearchitecture.user.service {
    namespace service {
      interface com.softwarearchitecture.user.service.service.IUser {
          {abstract} + save()
      }
    }
  }
  

  namespace com.softwarearchitecture.user.service {
    namespace service {
      class com.softwarearchitecture.user.service.service.RoleServiceImpl {
          + findRoleByName()
      }
    }
  }
  

  namespace com.softwarearchitecture.user.service {
    namespace service {
      class com.softwarearchitecture.user.service.service.UserServiceImpl {
          + save()
      }
    }
  }
  

  com.softwarearchitecture.user.service.service.RoleServiceImpl .up.|> com.softwarearchitecture.user.service.service.IRoleService
  com.softwarearchitecture.user.service.service.RoleServiceImpl o-- com.softwarearchitecture.user.service.repository.RoleRepository : repository
  com.softwarearchitecture.user.service.service.UserServiceImpl .up.|> com.softwarearchitecture.user.service.service.IUser
  com.softwarearchitecture.user.service.service.UserServiceImpl o-- com.softwarearchitecture.user.service.repository.UserRepository : repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
